# CGRA350-SlimeProject

./: README.md
CGRA350-SlimeProject/: .gitignore  README.md
CGRA350-SlimeProject/ext/glew-1.10.0/: ALL_BUILD.vcxproj  INSTALL.vcxproj  glew.vcxproj.filters
CGRA350-SlimeProject/ext/glew-1.10.0/glew.dir/Debug/glew.tlog/: CL.read.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CGRA350-SlimeProject/ext/glfw/: ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
CGRA350-SlimeProject/ext/glfw/src/: INSTALL.vcxproj.filters  glfw.vcxproj.filters
CGRA350-SlimeProject/ext/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog
CGRA350-SlimeProject/ext/glm/: INSTALL.vcxproj  glm_dummy.vcxproj.filters
CGRA350-SlimeProject/ext/glm/glm_dummy.dir/Debug/: glm_dummy.exe.recipe
CGRA350-SlimeProject/ext/glm/glm_dummy.dir/Debug/glm_dummy.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.read.1.tlog
CGRA350-SlimeProject/ext/imgui/: INSTALL.vcxproj  imgui.vcxproj
CGRA350-SlimeProject/ext/imgui/imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog
CGRA350-SlimeProject/ext/stb/: INSTALL.vcxproj  stb.vcxproj
CGRA350-SlimeProject/ext/stb/stb.dir/Debug/stb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
CGRA350-SlimeProject/res/: INSTALL.vcxproj.filters  res.vcxproj  res.vcxproj.filters
CGRA350-SlimeProject/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  base.vcxproj  base.vcxproj.filters
CGRA350-SlimeProject/src/base.dir/Debug/: base.exe.recipe
CGRA350-SlimeProject/src/base.dir/Debug/base.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.write.1.tlog
CGRA350-SlimeProject/src/cgra/: INSTALL.vcxproj  INSTALL.vcxproj.filters
CGRA350-SlimeProject/work/: CMakeLists.txt
CGRA350-SlimeProject/work/ext/glew-1.10.0/: CMakeLists.txt
CGRA350-SlimeProject/work/ext/glfw/: CMakeLists.txt
CGRA350-SlimeProject/work/res/shaders/: color_frag.glsl
CGRA350-SlimeProject/work/src/: BlockMaterials.hpp  ProceduralEnvironment.cpp
CGRA350-SlimeProject/work/src/SlimeSimulation/: SlimeBlock.cpp  SlimeBlock.hpp
ext/glew-1.10.0/: ALL_BUILD.vcxproj.filters  GLEW.sln  INSTALL.vcxproj.filters  glew.vcxproj
ext/glew-1.10.0/glew.dir/Debug/glew.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
ext/glfw/: ALL_BUILD.vcxproj  INSTALL.vcxproj
ext/glfw/docs/: Doxyfile
ext/glfw/src/: INSTALL.vcxproj  glfw.vcxproj
ext/glfw/src/glfw.dir/Debug/: glfw3.lib.recipe
ext/glfw/src/glfw.dir/Debug/glfw.tlog/: CL.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
ext/glm/: INSTALL.vcxproj.filters  glm_dummy.vcxproj
ext/glm/glm_dummy.dir/Debug/glm_dummy.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.write.1.tlog
ext/imgui/: INSTALL.vcxproj.filters  imgui.vcxproj.filters
ext/imgui/imgui.dir/Debug/imgui.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib.command.1.tlog
ext/stb/: INSTALL.vcxproj.filters  stb.vcxproj.filters
ext/stb/stb.dir/Debug/stb.tlog/: stb.lastbuildstate
res/: INSTALL.vcxproj
src/base.dir/Debug/base.tlog/: CL.command.1.tlog  CustomBuild.read.1.tlog  link.read.1.tlog
work/src/: BlockMaterials.cpp  BlockMaterials.hpp  BlockTypes.hpp  CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp  ProceduralEnvironment.cpp  ProceduralEnvironment.hpp  application.cpp  application.hpp  small_house.txt
work/src/SlimeSimulation/: SlimeBlock.cpp  SlimeBlock.hpp
